updated swagger for 2 handlers
